--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
+# DS_Store
+.DS_Store
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
+
+# Python packaging
+*.egg-info
 
 # C extensions
 *.so
